# dapp-monorepo

./: .env.example  .git-credentials.example  .gitignore  .tool-versions  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION.md  Makefile  README.md  docker-compose.yml  install-powershell.sh  mcp.json  package.json
.cargo/: config.toml
.cursor/rules/: cairo-coder-rules.mdc
.gemini/: GEMINI.md  specs  steering
.github/workflows/: docs-deploy.yml  gitflow.yml
.kiro/settings/: mcp.json
.kiro/specs/01-keiko-dapp/: design.md  requirements.md  tasks.md  zkProof_R1CS_Cairo_Keiko_Prompt.markdown
.kiro/specs/02-flutter-frontend/: requirements.md  tasks.md
.kiro/specs/02-gitops-cicd/: requirements.md  tasks.md
.kiro/specs/02-material-design/: material_branded_theme_constants.dart
.kiro/specs/03-flutter-frontend/: design.md  requirements.md
.kiro/specs/03-microservices/: requirements.md
.kiro/specs/03-microservices-cicd/: design.md  requirements.md  tasks.md
.kiro/specs/04-gitops-cicd/: design.md
.kiro/specs/04-material-design/: flutter-material-widgets-style-dictionary.json
.kiro/specs/05-material-design/: material-theme-template-final.json  material_branded_theme_template.dart
.kiro/steering/: branding.md  context7.md  frontend-branding.md  license.md  microservices-arquitecture-principles.md  product.md  repository.md  structure.md  substrate-build-issues.md  tech.md
.specs/01-keiko-dapp/: monorepo_structure.md  requirements.md  tasks.md
api-gateway/: Cargo.toml
api-gateway/admin_panel/: Cargo.toml
api-gateway/admin_panel/src/: app.rs  main.rs
api-gateway/graphql_server/: Cargo.toml
api-gateway/graphql_server/src/: context.rs  lib.rs
appchain/: README.md  check-devnet-status.sh  check-status.sh  fix-podman-mounts.sh  quick-start.sh  setup-devnet-podman-interactive.sh  setup-devnet-wsl.sh  start-devnet-podman.sh  start-devnet-simple.sh  stop-appchain.sh  stop-devnet.sh  view-logs-err.sh  view-logs-out.sh  view-logs.sh
appchain/config/: keikochain.toml
appchain/fixtures/poh/: humanity_proof_samples.json
appchain/mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
appchain/mcp-server/src/: index.ts
appchain/seeds/: seed_poh.sh
backend/: Cargo.toml  README.md
backend/.cargo/: config.toml
backend/modules/governance/src/: main.rs
backend/modules/identity/: Cargo.toml
backend/modules/learning_passport/: Cargo.toml
backend/modules/learning_passport/src/: lib.rs  main.rs
backend/modules/learning_passport/src/domain/: mod.rs
backend/modules/learning_passport/src/repository/: mod.rs
backend/modules/learning_passport/src/service/: mod.rs
backend/modules/marketplace/: Cargo.toml
backend/modules/marketplace/src/: main.rs
backend/modules/reputation/: Cargo.toml
backend/modules/selfstudy_guides/: Cargo.toml
backend/modules/selfstudy_guides/src/: lib.rs
backend/node/: Cargo.toml  build.rs
backend/node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
backend/pallets/learning_interactions/: Cargo.toml
backend/pallets/learning_interactions/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
backend/pallets/life_learning_passport/: Cargo.toml
backend/pallets/life_learning_passport/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
backend/pallets/reputation_system/: Cargo.toml
backend/pallets/reputation_system/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
backend/runtime/: Cargo.toml  build.rs
backend/runtime/src/: lib.rs  tests.rs
backend/src/: main.rs
backend/tests/: setup-wsl2-substrate.ps1  tests-building-on-windows.ps1
blockchain/: Cargo.toml
blockchain/node/: Cargo.toml  build.rs
blockchain/node/src/: chain_spec.rs  command.rs  service.rs
blockchain/pallets/learning_interactions/: Cargo.toml
blockchain/pallets/learning_interactions/src/: lib.rs  mock.rs  tests.rs
blockchain/pallets/life_learning_passport/: Cargo.toml
blockchain/pallets/life_learning_passport/src/: tests.rs
blockchain/pallets/reputation_system/: Cargo.toml
blockchain/pallets/reputation_system/src/: benchmarking.rs  lib.rs
blockchain/runtime/: Cargo.toml  build.rs
blockchain/runtime/src/: lib.rs  mock.rs  tests.rs
blockchain/tests/: fix-proc-macro-issues.ps1  run-wsl2-command.ps1  setup-wsl2-substrate.ps1  test-pallet-using-wsl2.ps1
docs/: GITHUB_PAGES_SETUP.md  README.md  cairo-macros-cheatsheet.md  mkdocs.yml  requirements.txt
docs/content/: README.md  index.md
docs/content/architecture/: overview.md
docs/content/development/: cairo-quick-reference.md  keiko-cairo-contracts.md
docs/content/getting-started/: quick-setup.md
docs/development/: cairo-macros-cheatsheet.md  gitflow.md
docs/getting-started/: installation.md
docs/javascripts/: keiko-custom.js
docs/stylesheets/: keiko-custom.css
frontend/: pubspec.yaml
grpc-gateway/: .tool-versions  README.md
infrastructure/: podman-compose.yml
infrastructure/docker/postgres/: init.sql
middleware/api_gateway/: package.json
middleware/graphql_server/: Cargo.toml
middleware/graphql_server/src/: schema.rs
middleware/web_frontend/: Cargo.toml  Leptos.toml
scripts/: api-gateway-quick-start.sh  backend-modules-quick-start.sh  dev-setup.ps1  frontend-quick-start.sh  gitflow-setup.sh  grpc-gateway-quick-start.sh  install-deps.sh  verify-setup.sh
services/: README.md  quick-start.sh
services/governance-service/: Cargo.toml
services/identity-service/: Cargo.toml
services/identity-service/src/: main.rs
services/learning-service/: Cargo.toml
services/marketplace-service/: Cargo.toml
services/passport-service/: Cargo.toml
services/passport-service/src/: main.rs
services/reputation-service/: Cargo.toml
services/reputation-service/src/: main.rs
shared/types/: Cargo.toml
shared/types/src/: lib.rs
shared/utils/: Cargo.toml
shared/utils/src/: lib.rs
site/: 404.html  index.html  sitemap.xml
site/architecture/overview/: index.html
site/development/cairo-macros-cheatsheet/: index.html
site/development/cairo-quick-reference/: index.html
site/search/: search_index.json
(+7 files in other folders)
