[workspace]
members = [
    "graphql_server",
    "web_frontend",
    "ai_tutor_service", 
    "lrs_connector",
    "parachain_bridge"
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
# Web frameworks
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
# GraphQL
juniper = { version = "0.16", features = ["schema-language"] }
juniper_axum = "0.1"
# Leptos
leptos = { version = "0.6" }
leptos_axum = "0.6"
leptos_meta = "0.6"
leptos_router = "0.6"
## Blockchain (Substrate) - removed for now
# Database & Cache
redis = { version = "0.24", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# HTTP Client
reqwest = { version = "0.11", features = ["json"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# WASM
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"