# Business Source License 1.1
# 
# Licensed Work: keiko-dapp Version 0.0.1 or later.
# The Licensed Work is (c) 2025 Luis Andrés Peña Castillo
# 
# For full license terms, see LICENSE file in the repository root.

[workspace]
members = [
    "node",
    "runtime",
    "pallets/learning_interactions",
    "pallets/life_learning_passport",
    "pallets/reputation_system",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.47", features = ["net", "rt-multi-thread", "macros"] }

[profile.release]
panic = "unwind"

[patch.crates-io]
# Linux optimization patches - will show "not used" warnings on Windows (expected)
tikv-jemalloc-sys = { git = "https://github.com/tikv/jemallocator.git", branch = "main" }
librocksdb-sys = { git = "https://github.com/rust-rocksdb/rust-rocksdb.git", branch = "master" }
