[package]
name = "keiko-web-frontend"
version = "0.1.0"
edition = "2021"
authors = ["Keiko Team"]
homepage = "http://keiko-dapp.xyz/"
repository = "https://github.com/keikolatam/keiko-dapp"
license-file = "../../../LICENSE"
publish = false

[dependencies]
# Leptos Framework
leptos = { version = "0.6" }
leptos_axum = { version = "0.6", optional = true }
leptos_meta = { version = "0.6", optional = true }
leptos_router = { version = "0.6", optional = true }
# Web Framework (SSR)
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.4", features = ["util"], optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
# WASM (CSR)
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
# HTTP Client
reqwest = { version = "0.11", features = ["json"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# GraphQL UI helpers
juniper = { version = "0.16", optional = true }
keiko-graphql-server = { path = "../graphql_server", package = "keiko-graphql-server", optional = true }

[features]
default = ["ssr"]
csr = ["leptos/csr", "leptos_router/csr"]
hydrate = [
    "leptos/hydrate", 
    "leptos_meta/hydrate", 
    "leptos_router/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook"
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr", 
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:juniper",
    "dep:keiko-graphql-server"
]