# Business Source License 1.1
# 
# Licensed Work: keiko-dapp Version 0.0.1 or later.
# The Licensed Work is (c) 2025 Luis Andrés Peña Castillo
# 
# For full license terms, see LICENSE file in the repository root.

[package]
name = "keiko-runtime"
version = "0.1.0"
description = "Keiko parachain runtime"
authors = ["Keiko Team"]
homepage = "http://keiko-dapp.xyz/"
edition = "2025"
license-file = "../../LICENSE"
publish = false
repository = "https://github.com/keikolatam/keiko-dapp"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
hex-literal = { version = "0.3.4", optional = true }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.145", optional = true, features = ["derive"] }
smallvec = "1.9.0"
tokio = { workspace = true }

# Local Dependencies
pallet-learning-interactions = { path = "../pallets/learning_interactions", default-features = false }
pallet-life-learning-passport = { path = "../pallets/life_learning_passport", default-features = false }
pallet-reputation-system = { path = "../pallets/reputation_system", default-features = false }

# Substrate
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
frame-executive = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
frame-system-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
frame-try-runtime = { default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
pallet-aura = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
pallet-authorship = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
pallet-session = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
sp-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
sp-session = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
sp-version = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }

# Polkadot
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-stable2506" }
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-stable2506" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-stable2506" }
staging-xcm = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-stable2506" }
staging-xcm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-stable2506" }
staging-xcm-executor = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-stable2506" }

# Cumulus
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-stable2506" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-stable2506" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-stable2506" }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-stable2506" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-stable2506" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-stable2506" }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-stable2506" }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-stable2506" }
cumulus-primitives-utility = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-stable2506" }
pallet-collator-selection = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-stable2506" }
staging-parachain-info = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, tag = "polkadot-stable2506" }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"serde",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-xcm/std",
	"staging-parachain-info/std",
	"polkadot-parachain-primitives/std",
	"polkadot-runtime-common/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"staging-xcm-builder/std",
	"staging-xcm-executor/std",
	"staging-xcm/std",
	"pallet-learning-interactions/std",
	"pallet-life-learning-passport/std",
	"pallet-reputation-system/std",
]

runtime-benchmarks = [
	"hex-literal",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"staging-xcm-builder/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"pallet-learning-interactions/runtime-benchmarks",
	"pallet-life-learning-passport/runtime-benchmarks",
	"pallet-reputation-system/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-dmp-queue/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-session/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-xcm/try-runtime",
	"staging-parachain-info/try-runtime",
	"pallet-learning-interactions/try-runtime",
	"pallet-life-learning-passport/try-runtime",
	"pallet-reputation-system/try-runtime",
]