[package]
name = "keiko-graphql-server"
version = "0.1.0"
edition = "2021"
authors = ["Keiko Team"]
homepage = "http://keiko-dapp.xyz/"
repository = "https://github.com/keikolatam/keiko-dapp"
license-file = "../../../LICENSE"
publish = false

[dependencies]
# GraphQL Server
juniper = { version = "0.16", features = ["schema-language"] }
juniper_axum = "0.1"
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
# Blockchain
substrate-api-client = "0.18"
# Database & Cache
redis = { version = "0.24", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Async
futures = "0.3"
# Error handling
anyhow = "1.0"
thiserror = "1.0"

[features]
default = []